[gd_scene load_steps=19 format=3 uid="uid://s6vrdhuonvd7"]

[ext_resource type="Texture2D" uid="uid://qb1qsialxq3b" path="res://Assets/SGQ_Enemies_v1_0_0/SGQ_Enemies/normal/16x16/bat.png" id="1_mah6n"]
[ext_resource type="Script" path="res://Scripts/enemies/bat.gd" id="1_mlsx6"]
[ext_resource type="PackedScene" uid="uid://4twh1kj7svlx" path="res://Scenes/player_detector.tscn" id="3_8a62q"]
[ext_resource type="PackedScene" uid="uid://br3cnet7eux2k" path="res://Scenes/damager.tscn" id="4_2jewg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ylk5"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_44a2e"]
atlas = ExtResource("1_mah6n")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs7es"]
atlas = ExtResource("1_mah6n")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_siieb"]
atlas = ExtResource("1_mah6n")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_igiwi"]
atlas = ExtResource("1_mah6n")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko6ys"]
atlas = ExtResource("1_mah6n")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f0q8"]
atlas = ExtResource("1_mah6n")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ui8ol"]
atlas = ExtResource("1_mah6n")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qmsy"]
atlas = ExtResource("1_mah6n")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_meu6k"]
atlas = ExtResource("1_mah6n")
region = Rect2(48, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ryp26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44a2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs7es")
}],
"loop": false,
"name": &"attack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_siieb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igiwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko6ys")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f0q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ui8ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qmsy")
}],
"loop": true,
"name": &"fly",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_siieb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igiwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko6ys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meu6k")
}],
"loop": false,
"name": &"hurt",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6kd6c"]
radius = 10.0499

[sub_resource type="CircleShape2D" id="CircleShape2D_0mx05"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q84nw"]
radius = 5.09902

[node name="bat_enemy" type="StaticBody2D"]
script = ExtResource("1_mlsx6")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -11.0
offset_right = 9.0
offset_bottom = -7.0
theme_override_styles/fill = SubResource("StyleBoxFlat_4ylk5")
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="FlipParent" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="FlipParent"]
sprite_frames = SubResource("SpriteFrames_ryp26")
animation = &"attack"
autoplay = "fly"

[node name="player_detector" parent="FlipParent" instance=ExtResource("3_8a62q")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlipParent/player_detector"]
shape = SubResource("CircleShape2D_6kd6c")

[node name="damager" parent="FlipParent" node_paths=PackedStringArray("parent_body") instance=ExtResource("4_2jewg")]
damage = 3
parent_body = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlipParent/damager"]
shape = SubResource("CircleShape2D_0mx05")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q84nw")

[connection signal="animation_finished" from="FlipParent/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="player_enter" from="FlipParent/player_detector" to="." method="_on_player_detector_player_enter"]
